BuildHughes/translation-tool/inputs/source_meta/objects/Account_to_Tool_Mapping__c.object
<CustomObject>
    <description>Account_to_Tool_Mapping</description>
    <fields>
        <fullName>ACT_TOOL_MAP_ID__c</fullName>
        <description>Account to Tools Mapping ID</description>
        <externalId>true</externalId>
        <label>ACT TOOL MAP ID</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Tool__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tool</description>
        <inlineHelpText>Tool</inlineHelpText>
        <label>Tool</label>
        <referenceTo>Tools_Master__c</referenceTo>
        <relationshipName>Account_to_Tool_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vendor Account</description>
        <inlineHelpText>Vendor Account</inlineHelpText>
        <label>Vendor Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Account_to_Tool_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Account to Tool Mapping</label>
    <nameField>
        <displayFormat>ACTOOL-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account to Tool Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>